fix: RIEN, juste quelques suppressions de white space

--- a/src/scss/Base/reset.scss
+++ b/src/scss/Base/reset.scss
@@ -2,6 +2,7 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    color: rgba(213, 222, 239, 1);
 }
 
 body {
@@ -9,7 +10,6 @@ body {
     background-repeat: no-repeat;
     background-size: 100% auto;
     background-position: center top;*/
-    color: rgba(255, 255, 255, 1);
 }
 
 
