--- a/src/scss/Components/Navbar.scss
+++ b/src/scss/Components/Navbar.scss
@@ -38,7 +38,7 @@
         display: flex;
         align-items: center;
         gap: 15px;
-        p{
+        a{
           font-size: 20px;
           font-weight: bold;
         }
@@ -55,7 +55,7 @@
 
 }
 
-@media (max-width: 768px) {
+@media (max-width: 852px) {
   .menu {
     display: none;
     flex-direction: column;
